--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
-Rik Koncel-Kedziorski
+<html>
+<head>
+<title>Rik Koncel-Kedziorski</title>
+<style>
+  body {font-family: sans-serif;}
+img.source-image {
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 40%;
+  opacity: 0.3;
+}
+</style>
+</head>
+<body>
+<img class="source-image" src="bg.jpg">
+<div style="width:30%;position:absolute;left:10%">
+<h1>Rik Koncel-Kedziorski</h1> <br />
+<b>kedzior at washington dot edu</b> <br /><br />
+I am a Post-Doctoral researcher working for Professor <a href=http://www.ark.cs.washington.edu/>Noah Smith</a> and the Department of Computer Science at the University of Washington. I received my PhD from the UW Department of Linguistics where I was co-advised by <a href=http://ssli.ee.washington.edu/~hannaneh/>Hannaneh Hajishirzi</a> and <a href=http://faculty.washington.edu/levow>Gina-Anne Levow</a>. <br \><br \>
+<!-- I am on the job market. Please see my <a href="resume.pdf">resume</a>. -->
+<p><h2>Research Summary</h2>
+I research machine learning techniques for document understanding and generation. 
+In understanding, I focus on intertextuality for techincal documents, language grounding, and question answering.
+In generation, I focus on learning to write coherent multi-sentence texts which meet specified content and style goals. 
+</p>
+<p><h2>Publications</h2>
+For an up-to-date list of my publications please visit 
+<a href="https://scholar.google.com/citations?user=hpdPMnoAAAAJ&hl=en">my Google Scholar Page</a>.<br /><br />
+</p>
+<p><h2>Personal</h2>
+I'm often at sea, or off in the woods. 
+</div>
+</body>
+</html>
