--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ I am a Post-Doctoral researcher working for Professor <a href=http://www.ark.cs.
 <!-- I am on the job market. Please see my <a href="resume.pdf">resume</a>. -->
 <p><h2>Research Summary</h2>
 I research machine learning techniques for document understanding and generation. 
-In understanding, I focus on intertextuality for techincal documents, language grounding, and question answering.
+In understanding, I focus on intertextuality for technical documents, language grounding, and question answering.
 In generation, I focus on learning to write coherent multi-sentence texts which meet specified content and style goals. 
 </p>
 <p><h2>Publications</h2>
